# coscientist

./: .env.example  .gitignore  PUBLICATION.md  README.md  calibrate_concordance.py  company.py  config.yaml  coscientist.py  pyproject.toml
agents/: base.py  evolution.py  generation.py  meta_review.py  proximity.py  ranking.py  reflection.py
bench/: ablation.py  baseline.py  cli.py  concordance.py  cost.py  cross_tournament.py  errors.py  goalset.py  goldset.py  judge.py  manifest.py  orchestrate.py  reference.py  report.py  runner.py  scaling.py
company/: __init__.py  cli.py  cso.py  engine.py  kg.py  ledger.py  literature.py  models.py  registry.py  science.py  store.py  validation.py
core/: config_parser.py  models.py  orchestrator.py  reflection_pipeline.py  state.py  stats.py  supervisor.py  tournament.py
docs/: REFERENCES.md
qc/: __init__.py  agent.py  detectors.py  hardening.py  harness.py  synth.py  value_experiment.py
tests/: conftest.py  test_base_agent.py  test_bench_ablation.py  test_bench_baseline.py  test_bench_concordance.py  test_bench_cost.py  test_bench_cross_tournament.py  test_bench_goalset.py  test_bench_goldset.py  test_bench_gpqa.py  test_bench_integration.py  test_bench_judge.py  test_bench_manifest.py  test_bench_orchestrate.py  test_bench_report.py  test_bench_runner.py  test_bench_scaling.py  test_bench_smoke.py  test_claude.py  test_claude_code.py  test_claude_oauth.py  test_company.py  test_config_parser.py  test_evolution.py  test_generation.py  test_integration.py  test_kg.py  test_literature.py  test_llm.py  test_meta_review.py  test_models.py  (+17 more)
(+46 files in other folders)
